--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-body{
+body {
 
-  background-color: azure;
-  color: rgb(0, 0, 0);
-  
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+
 }
