--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,24 @@
 body {
-
+  padding: 0;
+  margin: 0;
   background-color: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
 
+}
+
+.navbar {
+  padding: 0 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid black;
+}
+
+.navbar-links {
+  display: flex;
+  gap: 30px;
+}
+
+.container {
+  padding: 0 50px;
 }
